# RealTimeLearning

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README  a.out  clean.sh  cmake_install.cmake  input_example.csv  newDev  secondDevelopAction
.csettings/: cdt.managedbuild.toolchain.gnu.base.486869692_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.base.486869692_de.marw.cdt.cmake.core.settings  cdt.managedbuild.toolchain.gnu.base.486869692_org.eclipse.cdt.core.settings
core/: AbstractActivityHandler.cpp  AbstractActivityHandler.h  CMakeLists.txt  CoordinatesCalculator.cpp  CoordinatesCalculator.h  DronePilot.cpp  DronePilot.h  Makefile  PerformanceCalculator.cpp  PerformanceCalculator.h  PerformanceTester.cpp  PerformanceTester.h  Point.cpp  Point.h  Point3D.cpp  Point3D.h  ThreeDimensionPoint.cpp  ThreeDimensionPoint.h  Utils.h  cmake_install.cmake
drone_lib/: CMakeLists.txt  ctello-command  ctello-state  ctello-stream
drone_lib/examples/: flip_world.cpp
drone_lib/include/: ctello.h
drone_lib/src/: ctello.cpp  ctello_command.cpp
main/: CMakeLists.txt  Main.py  Makefile  RealTimeLearningApp  Third FUcking Working Coordinates.csv  bgShort.csv  cmake_install.cmake  main.cpp
orb_slam/: CMakeLists.txt  a.out
orb_slam/config/: TELLO.yaml
orb_slam/include/: KeyFrame.h
orb_slam/src/: Initializer.cc  KeyFrameDatabase.cc  Optimizer.cc  System.cc
orb_slam/tools/: bin_vocabulary
tools/: bin_vocabulary
